2001-01-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-perl.c: Martin Schulz <schulz@videotron.ca> contributed
	a perl driver, based on the python driver. It maps each and every
	piece of information to a string, even dates and and numerical
	values. However, maybe it is useful to some people.

2000-12-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Some well-known SMI identifiers imported
	from RFC* modules are now suggested to be imported from SMIv2
	modules, where appropriate. This modifies an earlier patch
	from Bill.

2000-12-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-identifers.c: Juergen made dump-lines.c obsolete
	by adding two options to the `identifiers' format.

2000-12-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Bill contributed a `lines' dump format to
	print line numbers of definitions. He contributed also a patch
	that allows the `identifiers' format to report identifiers with
	OID definitions that could not be resolved (as in {mib-2 xxx}).

	* lib/parser-smi.h: Bill added special handling for unintentionally
	terminated comments and hints on definitions that could be imported
	from more recent modules.

2000-12-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/dump-*.c: More patches from Juergen. Most drivers are
	now `-o file' aware. The `imports' driver does no longer hang
	in an endless loop on recursive imports.

2000-12-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-*.h: yyerror-verbose is now non-optional.

	* tools/dump-*.c: Juergen fixed various dump drivers. `cm' is
	now a single format with an `explain' option. Man pages are
	updated to include long options.

2000-12-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-*.c: Fixes from Juergen.

2000-12-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/NOTIFICATION-LOG-MIB: added (RFC 3014).

	* mibs/ietf/FR-MFR-MIB: added (RFC 3020).

2000-12-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
